Fix displaying the layout on mobile by adding a bottom margin to rows instead of positioning the motto-box fixed

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -128,28 +128,22 @@ body {
 /*****************************
 *           Main
 *****************************/
+.main-content {
+  @media screen and (max-width: 576px) {
+    margin-bottom: 50px;
+  }
+
+  @media screen and (min-width: 577px) {
+    margin-bottom: 100px;
+  }
+}
+
 .motto-box {
   @media screen and (min-width: 992px) {
     position: fixed;
     bottom: 100px;
     right: 60px;
     width: 40% !important;
-  }
-
-  @media screen and (min-width: 768px) {
-    position: fixed;
-    width: 80%;
-    margin: 0 auto;
-    bottom: 100px;
-    right: 60px;
-  }
-
-  @media screen and (min-width: 576px) {
-    position: fixed;
-    width: 80%;
-    margin: 0 auto;
-    bottom: 100px;
-    right: 60px;
   }
 }
 
